--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+li{list-style-type:none ;}
+
 h5{
 
     font-weight: bold;
@@ -118,28 +120,255 @@ transform: translateY(-10%);
 
 }
 
-/* ****************************************what do we provide service section***************************************** */
+/* ****************************************what do we provide service section START ***************************************** */
+
+.services{
+    background-color: #f7f7f9;
+    margin-bottom:30px;
+}
 
 .section-heading{
     padding:30px 0px 0px 40px;
     margin-top:10px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     
 }
 .section-heading h3{text-transform: uppercase;}
 
 .various-progress-bar,.side_description-content{
     padding:30px;
-    margin:20px 0px 20px 0px;
+    margin:10px 0px 10px 0px;
 
 
+}
+.progress{
+    height: 0.8rem;
 }
 .single-progressbar{
     margin:10px 0px 10px 0px; 
 }
 
 .side_description-content-innerdiv{
-    border:2px solid black;
+    /* border:2px solid black; */
     width: 100%;
     height: 100%;
+}
+
+.service-side-content-icons i{
+ color:#2fccd0;
+}
+
+/* ****************************************what do we provide service section END***************************************** */
+
+/* ****************************************what do we Stats section START***************************************** */
+
+.stat-block{
+    /* border:1px solid black; */
+    box-shadow: 0px 0px 10px rgb(85, 84, 84);border-radius: 5px;
+    padding:20px 0px;
+}
+
+
+/* ****************************************what do we Stats section END***************************************** */
+
+
+
+/* ****************************************what do we Pricing section START***************************************** */
+
+.Pricing-section{
+    /* border:2px solid firebrick; */
+    margin-top:100px;
+    width:100%;
+    height: 100vh;
+    position: relative;
+
+}
+
+.Pricing-section::before{
+    content: "";
+    position:absolute;
+    width:100%;
+    height:100%;
+    /* border:2px solid orange; */
+    background-color: rgba(30, 144, 255,0.7);
+    z-index: -1;
+    clip-path: polygon(0% 0%,100% 0%,100% 20%,0% 90%);
+}
+
+.all_three_card-container{
+    margin-top:40px;
+    padding:0px 40px;
+}
+
+.card .card-body{
+    padding:20px 40px 20px;
+
+
+}
+.card-body span{
+    font-size: 40px
+}
+
+.card-body li{
+    font-size: 20px
+}
+
+.card-footer-button{
+    margin: 10px 0px 25px;
+
+}
+
+.card-footer-button a{
+    border:2px solid #2fd09a;
+    border-radius: 100px;
+    padding:10px 30px;
+text-decoration: none;
+color:#2fd09a;
+
+
+
+}
+
+.card-footer-button a:hover{
+    background-color: #2fd09a;
+    color:white;
+    outline:2px solid white;
+   
+}
+
+.card{
+    border-radius: 20px;
+    transition: 0.3s;
+}
+
+
+
+.card:hover{
+
+    box-shadow: 0px 0px 20px #2fd09a;
+    transform: translateY(-1.5vw);
+    
+}
+
+.card:hover span,.card:hover .card-header{
+    color:#2fd09a;
+}
+
+
+
+/* ****************************************what do we Pricing section END***************************************** */
+/* ****************************************what do we Courouselsection END***************************************** */
+
+.carousel{
+    margin:30px;
+    /* border:2px solid red */
+    
+}
+.carousel-heading{background-color: #f7f7f9;}
+.reviewbox{
+
+    margin:40px 0px;
+    transition: 0.2s;
+    border-radius: 40px;
+    margin-bottom: 20px;
+    
+}
+
+.reviewbox h1,p,h3,img{
+    margin:15px;
+}
+.reviewbox h3{padding-bottom: 10px;}
+
+.reviewbox:hover {
+transform: translateY(-3vh);
+box-shadow:0px 0px 5px rgba(0, 0, 0,0.7);
+
+}
+
+
+.carousel-next-prev-icons:hover{
+    background-color: grey;
+    clip-path:circle(60px at 50% 50%) ;
+}
+
+.carousel-indicators li{
+    background-color:#2fccd0;
+    position: relative;
+    top:20px;
+    
+}
+
+.carousel-heading{
+    border-bottom: 2px solid black;border-top: 2px solid black;
+}
+/* ****************************************what do we Courouselsection END***************************************** */
+
+
+/* ****************************************what do we Forms-Section START***************************************** */
+
+
+.forms-section{
+    /* border:2px solid black; */
+    position: relative;
+   
+}
+
+section{margin: 20px 0px; border-radius: 30px;}
+
+.forms-section::before{
+    content: "";
+    width:100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(30, 144, 255,0.7);
+    border-radius: inherit;
+    z-index: -1;
+    clip-path: polygon(95% 0%,100% 0%,100% 100%,0% 100%);
+}
+
+.forms-section button{
+    border-radius: 100px;
+    padding:15px 30px;
+}
+
+
+
+
+/* ****************************************what do we Forms-Section END***************************************** */
+
+
+
+.footersection{
+    width:100%;
+    padding: 70px 0px 20px;
+    border:2px solid grey;
+    background-color: black;
+    color: white;
+    position: absolute;
+}
+
+.footercolumn1content{
+    /* border:2px solid green; */
+    width: 100%;
+}
+
+.sidearrow{
+    position: fixed;
+    bottom:20px;
+    right:20px;
+    z-index: 2;
+    background-color: black;
+    padding:10px 20px;
+    border-radius: 10px;
+    color:white
+
+}
+.sidearrow:hover{
+
+    background-color: #606060;
+   
+}
+
+#cc{
+
 }
